new update text

--- a/updates.html
+++ b/updates.html
@@ -27,13 +27,14 @@
 
     <div id="updates">
         <div class="update-card">
-			<p><b>{&nbsp; 2020-05-19 : Wednesday  &nbsp;}</b></p>
+			<p><b>{&nbsp; 2020-05-26 : Tuesday : UPDATE 01 &nbsp;}</b></p>
 			<p>
-				With Phase 2 just started this week, we are currently planning out what our updated dining area set-up would look like as well as implementing new social distancing measures needed to provide dine-in service. In the meantime, we will be continuing with take-out only service. <br><br>
-				We would like to thank you again for your continued support and are already looking forward to posting new updates here!
+				After some serious thought on how we'll be proceeding in the new Phase 2, we have decided to remain offering take-out service only.<br><br>As you may know, our dining area is pretty small and with the necessary social distancing measures in place, we would end up only able to open 2-3 tables which isn't very practical!<br><br>
+				That said, we will be revising our response as the pandemic and BC health regulations change.<br>
+				We would like to thank you again for your continued support and are already looking forward to posting new updates here soon!
 			</p>
         </div>
-    </div>
+	</div>
 
 	<div class="footer menu">
 	    <ul>
