finished updates page

--- a/updates.html
+++ b/updates.html
@@ -27,9 +27,9 @@
 
     <div id="updates">
         <div class="update-card">
-			<p><b>{&nbsp; 2020-05-26 : Tuesday : UPDATE 01 &nbsp;}</b></p>
+			<h3><b>[&nbsp; 2020-05-30 : Saturday : UPDATE 01 &nbsp;]</b></h3>
 			<p>
-				After some serious thought on how we'll be proceeding in the new Phase 2, we have decided to remain offering take-out service only.<br><br>As you may know, our dining area is pretty small and with the necessary social distancing measures in place, we would end up only able to open 2-3 tables which isn't very practical!<br><br>
+				After some serious thought on how we'll be proceeding in the new Phase 2, we have decided to remain offering take-out service only.<br><br>As you may know, our dining area is pretty small and with the necessary social distancing measures in place, we would end up being only able to open 2-3 tables which currently isn't very practical!<br><br>
 				That said, we will be revising our response as the pandemic and BC health regulations change.<br>
 				We would like to thank you again for your continued support and are already looking forward to posting new updates here soon!
 			</p>
