new update; minor style changes

--- a/updates.html
+++ b/updates.html
@@ -23,9 +23,19 @@
 			<a href="updates.html"><li>UPDATES</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
-    </div>
+	</div>
 
     <div id="updates">
+		<div>
+			<div class="update-card" style="background-color:#DDDDDD; border: none">
+				<h3><b>[&nbsp; 2020-06-24 : Wednesday : UPDATE 02 &nbsp;]</b></h3>
+				<p>
+					After considerations and the recent transition into Phase 3, we have decided to open up a limited dine in service during our regular business hours! Delivery service will remain paused, but take-out is still availble all day. <br><br>
+					We end this brief update with another round of thanks for your continued support. Looking forward to seeing you soon!
+				</p>
+			</div>
+		</div>
+
         <div class="update-card">
 			<h3><b>[&nbsp; 2020-05-30 : Saturday : UPDATE 01 &nbsp;]</b></h3>
 			<p>
