updated updates tab title

--- a/updates.html
+++ b/updates.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
 
 	<link href="styles.css" rel="stylesheet" type="text/css">
-	<title>CONTACT</title>
+	<title>UPDATES</title>
 </head>
 <body>
 	<div id="main">
@@ -30,7 +30,7 @@
 			<div class="update-card" style="background-color:#DDDDDD; border: none">
 				<h3><b>[&nbsp; 2020-06-24 : Wednesday : UPDATE 02 &nbsp;]</b></h3>
 				<p>
-					After considerations and the recent transition into Phase 3, we have decided to open up a limited dine in service during our regular business hours! Delivery service will remain paused, but take-out is still availble all day. <br><br>
+					After considerations and the recent transition into Phase 3, we have decided to open up a <u>limited dine in service</u> during our regular business hours! Delivery service will remain paused, but take-out is still availble all day. <br><br>
 					We end this brief update with another round of thanks for your continued support. Looking forward to seeing you soon!
 				</p>
 			</div>
