removed extra div

--- a/updates.html
+++ b/updates.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
@@ -9,6 +10,7 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<title>UPDATES</title>
 </head>
+
 <body>
 	<div id="main">
 		<p>[ UPDATES ]</p>
@@ -16,47 +18,77 @@
 	</div>
 	<div class="menu" id="regularmenu">
 		<ul>
-			<a href="index.html"><li>HOME</li></a>
-			<a href="menu/lunch.html"><li>LUNCH</li></a>
-			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
-			<a href="contact.html"><li>CONTACT</li></a>
-			<a href="updates.html"><li>UPDATES</li></a>
-			<a href="note.html"><li>NOTE</li></a>
+			<a href="index.html">
+				<li>HOME</li>
+			</a>
+			<a href="menu/lunch.html">
+				<li>LUNCH</li>
+			</a>
+			<a href="menu/appetizers+soup.html">
+				<li>MENU</li>
+			</a>
+			<a href="contact.html">
+				<li>CONTACT</li>
+			</a>
+			<a href="updates.html">
+				<li>UPDATES</li>
+			</a>
+			<a href="note.html">
+				<li>NOTE</li>
+			</a>
 		</ul>
 	</div>
 
-    <div id="updates">
-		<div>
-			<div class="update-card" style="background-color:#DDDDDD; border: none">
-				<h3><b>[&nbsp; 2020-06-24 : Wednesday : UPDATE 02 &nbsp;]</b></h3>
-				<p>
-					After considerations and the recent transition into Phase 3, we have decided to open up a <u>limited dine in service</u> during our regular business hours! Delivery service will remain paused, but take-out is still availble all day. <br><br>
-					We end this brief update with another round of thanks for your continued support. Looking forward to seeing you soon!
-				</p>
-			</div>
+	<div id="updates">
+		<div class="update-card" style="background-color:#DDDDDD; border: none">
+			<h3><b>[&nbsp; 2020-06-24 : Wednesday : UPDATE 02 &nbsp;]</b></h3>
+			<p>
+				After considerations and the recent transition into Phase 3, we have decided to open up a <u>limited
+					dine in service</u> during our regular business hours! Delivery service will remain paused, but
+				take-out is still availble all day. <br><br>
+				We end this brief update with another round of thanks for your continued support. Looking forward to
+				seeing you soon!
+			</p>
 		</div>
 
-        <div class="update-card">
+		<div class="update-card">
 			<h3><b>[&nbsp; 2020-05-30 : Saturday : UPDATE 01 &nbsp;]</b></h3>
 			<p>
-				After some serious thought on how we'll be proceeding in the new Phase 2, we have decided to remain offering take-out service only.<br><br>As you may know, our dining area is pretty small and with the necessary social distancing measures in place, we would end up being only able to open 2-3 tables which currently isn't very practical!<br><br>
+				After some serious thought on how we'll be proceeding in the new Phase 2, we have decided to remain
+				offering take-out service only.<br><br>As you may know, our dining area is pretty small and with the
+				necessary social distancing measures in place, we would end up being only able to open 2-3 tables which
+				currently isn't very practical!<br><br>
 				That said, we will be revising our response as the pandemic and BC health regulations change.<br>
-				We would like to thank you again for your continued support and are already looking forward to posting new updates here soon!
+				We would like to thank you again for your continued support and are already looking forward to posting
+				new updates here soon!
 			</p>
-        </div>
+		</div>
 	</div>
 
 	<div class="footer menu">
-	    <ul>
-		    <a href="index.html"><li>HOME</li></a>
-			<a href="menu/lunch.html"><li>LUNCH SPECIAL</li></a>
-			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
-			<a href="contact.html"><li>CONTACT</li></a>
-			<a href="updates.html"><li>UPDATES</li></a>
-			<a href="note.html"><li>NOTE</li></a>
+		<ul>
+			<a href="index.html">
+				<li>HOME</li>
+			</a>
+			<a href="menu/lunch.html">
+				<li>LUNCH SPECIAL</li>
+			</a>
+			<a href="menu/appetizers+soup.html">
+				<li>MENU</li>
+			</a>
+			<a href="contact.html">
+				<li>CONTACT</li>
+			</a>
+			<a href="updates.html">
+				<li>UPDATES</li>
+			</a>
+			<a href="note.html">
+				<li>NOTE</li>
+			</a>
 		</ul>
 	</div>
 	<div class="finalnote">
-		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
+		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a
+				href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
