new update; minor index page change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			hi. this local asian restaurant is still <span>open</span> and <span>kickin' it&nbsp;</span>
 		</h1>
 		<hr>
-		<p id="blurb">Our kitchen is currently open for <b>[ <u>TAKE-OUT and limited DINE-IN service only</u> ]</b> during our usual business hours.<br><br>
+		<p id="blurb">Our kitchen is currently open for <b>[ <u>TAKE-OUT only</u> ]</b> during our usual business hours.<br><br>
 			Please check out the UPDATES page for the latest information and any pending changes!<br>
 			~ We thank you for continuing to support your local businesses and community ~
 		</p>
