--- a/updates.html
+++ b/updates.html
@@ -40,6 +40,18 @@
 	</div>
 
 	<div id="updates">
+		<div class="update-card">
+			<h3><b>[&nbsp; 2020-07-30 : Friday : UPDATE 03 &nbsp;]</b></h3>
+			<p>
+				With the surge of cases in Kelowna recently, we will be moving back to offering <u>take-out service only</u> for the meantime.
+				Apologies for any inconvenience caused. We are continuing to monitor the COVID situation and will be updating here on future changes.
+				<br><br>
+				As always, cheers to another round of thanks for your continued support for us and local businesses in general!
+			</p>
+
+		</div>
+
+
 		<div class="update-card" style="background-color:#DDDDDD; border: none">
 			<h3><b>[&nbsp; 2020-06-24 : Wednesday : UPDATE 02 &nbsp;]</b></h3>
 			<p>
