--- a/menu/sides+sauces.html
+++ b/menu/sides+sauces.html
@@ -14,20 +14,19 @@
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
-			</a>
-			<a href="../index.html"><p> HOME </p></a>
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')"></a>
+			<a href="../index.html">home</a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
-			</a>
-			<p class="phone">
-				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
-			</p>
+			<a class="nav-icon"
+				style="background-image: url('../res/icons/svg/003-phone-with-message.svg')"></a>
+			<a href="tel:+1-250-763-2988">250-763-2988</a>
+			<p>&nbsp;//&nbsp;</p>
+			<a href="tel:+1-250-763-2986">250-763-2986</a>
 		</div>
-		<div class="nav-item"> 	
-			<a class="nav-icon" href="" style="background-image: url('../res/icons/svg/022-wallet.svg')"></a>
-			<p><u>10% OFF ALL PICK-UP ORDERS OVER $25 !!!</u></p>
+		<div class="nav-item">
+			<a class="nav-icon" style="background-image: url('../res/icons/svg/022-wallet.svg')"></a>
+			<p>10% off all pick-up orders over $25!</p>
 		</div>
 	</div>
 	<div id="main">
