--- a/menu/lunch.html
+++ b/menu/lunch.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="UTF-8">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
@@ -14,16 +15,15 @@
 	<div class="menu-nav">
 		<div class="nav-item">
 			<a class="nav-icon" href="../index.html"
-				style="background-image: url('../res/icons/svg/005-restaurant.svg')">
-			</a>
-			<a href="../index.html"><p> HOME </p></a>
+				style="background-image: url('../res/icons/svg/005-restaurant.svg')"></a>
+			<a href="../index.html">home</a>
 		</div>
 		<div class="nav-item">
-			<a class="nav-icon" href="../contact.html" style="background-image: url('../res/icons/svg/003-phone-with-message.svg')">
-			</a>
-			<p class="phone">
-				<a href="tel:+1-250-763-2988">250-763-2988</a> &nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
-			</p>
+			<a class="nav-icon"
+				style="background-image: url('../res/icons/svg/003-phone-with-message.svg')"></a>
+			<a href="tel:+1-250-763-2988">250-763-2988</a>
+			<p>&nbsp;//&nbsp;</p>
+			<a href="tel:+1-250-763-2986">250-763-2986</a>
 		</div>
 	</div>
 	<div id="main">
