modified item prices

--- a/menu/seafood+specialties.html
+++ b/menu/seafood+specialties.html
@@ -68,32 +68,32 @@
 			<h1> SEAFOOD </h1>
 			<div class="column">
 				<div class="item">
-					<p>DEEP FRIED PRAWNS &nbsp;[16] <span>$12.95</span></p>
+					<p>DEEP FRIED PRAWNS &nbsp;[16] <span>$13.95</span></p>
 					<p class="desc">prawns coated in our house batter and deep fried
 					<p>
 				</div>
 				<div class="item">
-					<p>STIR-FRIED WHOLE PRAWNS <span>$16.95</span></p>
+					<p>STIR-FRIED WHOLE PRAWNS <span>$17.95</span></p>
 					<p class="desc"><strong>choose one: &nbsp;BLACK BEAN SAUCE / CURRY SAUCE / SZECHUAN SAUCE / TOMATO SAUCE </strong> <br><br>
 					stir-fried prawns + sauce of choice + assorted veggies </p>
 				</div>
 				<div class="last item">
-					<p>SEAFOOD IN A NEST <span>$19.95</span></p>
+					<p>SEAFOOD IN A NEST <span>$20.95</span></p>
 					<p class="desc"> stir-fried seafood medley of prawns, scallops, squid, and assorted veggies on top of a fried potato-hash nest</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="item">
-					<p>FRIED SCALLOPS WITH SNOW PEA <span>$17.95</span></p>
+					<p>FRIED SCALLOPS WITH SNOW PEA <span>$18.95</span></p>
 					<p class="desc"> fried whole scallops stir-fried with snow peas and assorted veggies </p>
 				</div>
 				<div class="item">
-					<p>FRIED SCALLOPS WITH GINGER &amp; GREEN ONION <span>$18.95
+					<p>FRIED SCALLOPS WITH GINGER &amp; GREEN ONION <span>$19.95
 					</span></p>
 					<p class="desc"> a sizzling stir-fry of whole scallops, ginger, green onion, and assorted veggies </p>
 				</div>
 				<div class="last item">
-					<p>DEEP FRIED SQUID WITH SPICY SALT <span>$13.95</span></p>
+					<p>DEEP FRIED SQUID WITH SPICY SALT <span>$14.95</span></p>
 					<p class="desc"> fried squid with pepper-salt and chili, topped off with quickly stif-fried bell peppers, onions, and carrots. a house specialty </p>
 				</div>
 			</div>
@@ -102,87 +102,87 @@
 			<h1> EXOTIC SPECIALTIES </h1>
 			<div class="column">
 				<div class="item">
-					<p> PHOENIX IN A NEST <span>$14.95</span></p>
+					<p> PHOENIX IN A NEST <span>$15.95</span></p>
 					<p class="desc"> a stir-fry of chicken and assorted veggies on top a fried potato-hash nest </p>
 				</div>
 				<div class="item">
-					<p> MOO GOO GAI PAI <span>$13.95</span></p>
+					<p> SAUTEED CHICKEN WITH MUSHROOMS <span>$14.95</span></p>
 					<p class="desc"> sliced chicken breast marinated in wine and exotic spices, stir-fried with fresh mushrooms </p>
 				</div>
 				<div class="item">
-					<p> GINGER BEEF or GINGER CHICKEN <span>$13.95</span></p>
+					<p> GINGER BEEF or GINGER CHICKEN <span>$14.95</span></p>
 					<p class="desc"> a refreshing entree featuring sliced beef or chicken and assorted julienned veggies in our unique sweet &amp; spicy ginger sauce.</p>
 				</div>
 				<div class="item">
-					<p> PINEAPPLE CHICKEN or PORK<span>$13.95</span></p>
+					<p> PINEAPPLE CHICKEN or PORK<span>$14.95</span></p>
 					<p class="desc"> lightly battered chicken breast or pork, fried until golden brown, and topped with pineapple sauce </p>
 				</div>
 				<div class="item">
-					<p> LEMON CHICKEN <span>$13.95</span></p>
+					<p> LEMON CHICKEN <span>$14.95</span></p>
 					<p class="desc"> lightly floured chicken breasts, grilled until golden brown and served with a sweet and tangy lemon sauce </p>
 				</div>
 				<div class="item">
-					<p> KUNG PO PRAWNS &nbsp;[ HOT ] <span>$16.95</span></p>
+					<p> KUNG PO PRAWNS &nbsp;[ HOT ] <span>$17.95</span></p>
 					<p class="desc"> whole prawns stir-fried with assorted veggies, hot chili, and garlic, topped with cashew nuts </p>
 				</div>
 				<div class="item">
-					<p> KUNG PO CHICKEN &nbsp;[ HOT ] <span>$14.95</span></p>
+					<p> KUNG PO CHICKEN &nbsp;[ HOT ] <span>$15.95</span></p>
 					<p class="desc"> diced chicken stir-fried with assorted veggies, hot chili, and garlic, topped with cashew nuts </p>
 				</div>
 				<div class="item">
-					<p> DICED CHICKEN or SHRIMP WITH CASHEW NUTS <span>$13.95</span>
+					<p> DICED CHICKEN or SHRIMP WITH CASHEW NUTS <span>$14.95</span>
 					</p>
 					<p class="desc"> a savoury stir-fry of chicken or shrimp and assorted veggies, topped with cashew nuts </p>
 				</div>
 				<div class="item">
-					<p> MA PO TOFU with MINCED BEEF <span>$12.95</span></p>
+					<p> MA PO TOFU with MINCED BEEF <span>$13.95</span></p>
 					<p class="desc"> tofu braised with minced beef, assorted peppers, and onions in a spicy bean sauce </p>
 				</div>
 				<div class="item">
-					<p> KULU CHICKEN or PORK <span>$13.95</span></p>
+					<p> KULU CHICKEN or PORK <span>$14.95</span></p>
 					<p class="desc"> fried boneless diced chicken or pork with pineapple, peppers, and green onions in a sweet &amp; spicy sauce </p>
 				</div>
 				<div class="last item">
-					<p> SZECHUAN BEEF or CHICKEN <span>$13.95</span></p>
+					<p> SZECHUAN BEEF or CHICKEN <span>$14.95</span></p>
 					<p class="desc"> sliced beef or chicken stir-fried with assorted veggies in a spicy and savoury Szechuan sauce </p>
 				</div>
 			</div>
 
 			<div class="column">
 				<div class="item">
-					<p> SLICED BEEF WITH OYSTER SAUCE <span>$13.95</span></p>
+					<p> SLICED BEEF WITH OYSTER SAUCE <span>$14.95</span></p>
 					<p class="desc"> tender sliced beef stir-fried with assorted veggies in an oyster sauce </p>
 				</div>
 				<div class="item">
-					<p> FRIED WHOLE GARLIC BUTTERFLY PRAWNS <span>$17.95</span></p>
+					<p> FRIED WHOLE GARLIC BUTTERFLY PRAWNS <span>$18.95</span></p>
 					<p class="desc"> whole butterflied prawns, seasoned with garlic and mild chili, grilled to perfection. <br><br>finished off with a saut&eacute; of peppers, onions, and carrots </p>
 				</div>
 				<div class="item">
-					<p> SINGAPORE-STYLE FRIED RICE NOODLES <span>$12.95</span></p>
+					<p> SINGAPORE-STYLE FRIED RICE NOODLES <span>$13.95</span></p>
 					<p class="desc"> rice vermicelli sauteed with shrimp, pork, chicken, and assorted veggies in a hot &amp; spicy dry curry</p>
 				</div>
 				<div class="item">
-					<p> HOMESTYLE FRIED RICE NOODLES <span>$12.95</span></p>
+					<p> HOMESTYLE FRIED RICE NOODLES <span>$13.95</span></p>
 					<p class="desc"> rice vermicelli sauteed with shrimp, pork, chicken, and assorted veggies</p>
 				</div>
 				<div class="item">
-					<p> BEEF CHOW FUN &nbsp;[ DRY ] <span>$12.95</span></p>
+					<p> BEEF CHOW FUN &nbsp;[ DRY ] <span>$13.95</span></p>
 					<p class="desc"> flat rice noodle stir-fried with beef and veggies in dark soy sauce </p>
 				</div>
 				<div class="item">
-					<p> BEEF CHOW FUN with BLACK BEAN SAUCE <span>$12.95</span></p>
+					<p> BEEF CHOW FUN with BLACK BEAN SAUCE <span>$13s.95</span></p>
 					<p class="desc"> flat rice noodle stir-fried with beef and veggies, topped with a black bean sauce </p>
 				</div>
 				<div class="item">
-					<p> TOFU HOT POT with BBQ PORK <span>$12.95</span></p>
+					<p> TOFU HOT POT with BBQ PORK <span>$13.95</span></p>
 					<p class="desc"> cubed tofu stir-fried with sliced BBQ pork and assorted veggies. <br><br> *served in a sizzling hot pot </p>
 				</div>
 				<div class="item">
-					<p> SEAFOOD with TOFU HOT POT <span>$15.95</span></p>
+					<p> SEAFOOD with TOFU HOT POT <span>$16.95</span></p>
 					<p class="desc"> cubed tofu stif-fried with scallops, shrimp, squid, and assorted veggies. <br><br> *served in a sizzling hot pot </p>
 				</div>
 				<div class="last item">
-					<p> MONGOLIAN BEEF &nbsp;[ HOT ] <span>$13.95</span></p>
+					<p> MONGOLIAN BEEF &nbsp;[ HOT ] <span>$14.95</span></p>
 					<p class="desc"> an unique and saucy stir-fry featuring tender sliced beef, mushrooms, green peppers and onions in a hot &amp; spicy sauce. <br><br> *served on a sizzling plate </p>
 				</div>
 			</div>
