updated menu headers, 'updates' page style; minor typo fix

--- a/updates.html
+++ b/updates.html
@@ -41,19 +41,17 @@
 
 	<div id="updates">
 		<div class="update-card">
-			<h3><b>[&nbsp; 2020-07-30 : Friday : UPDATE 03 &nbsp;]</b></h3>
+			<h3><b>[&nbsp; 2020-07-30 : UPDATE 03 &nbsp;]</b></h3>
 			<p>
 				With the surge of cases in Kelowna recently, we will be moving back to offering <u>take-out service only</u> for the meantime.
 				Apologies for any inconvenience caused. We are continuing to monitor the COVID situation and will be updating here on future changes.
 				<br><br>
 				As always, cheers to another round of thanks for your continued support for us and local businesses in general!
 			</p>
-
 		</div>
 
-
-		<div class="update-card" style="background-color:#DDDDDD; border: none">
-			<h3><b>[&nbsp; 2020-06-24 : Wednesday : UPDATE 02 &nbsp;]</b></h3>
+		<div class="update-card" style="background-color:#DDDDDD; border: 2px solid grey">
+			<h3><b>[&nbsp; 2020-06-24 : UPDATE 02 &nbsp;]</b></h3>
 			<p>
 				After considerations and the recent transition into Phase 3, we have decided to open up a <u>limited
 					dine in service</u> during our regular business hours! Delivery service will remain paused, but
@@ -64,7 +62,7 @@
 		</div>
 
 		<div class="update-card">
-			<h3><b>[&nbsp; 2020-05-30 : Saturday : UPDATE 01 &nbsp;]</b></h3>
+			<h3><b>[&nbsp; 2020-05-30 : UPDATE 01 &nbsp;]</b></h3>
 			<p>
 				After some serious thought on how we'll be proceeding in the new Phase 2, we have decided to remain
 				offering take-out service only.<br><br>As you may know, our dining area is pretty small and with the
