--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="service-icon" style="background-image: url('res/icons/svg/013-noodles.svg')">
 			</div>
 			<h1> LUNCH </h1>
-			<p>Lunch service from <b>opening to 2pm</b> every day! Make your own combo from a am exciting list of entrees!</p>
+			<p>Lunch service from <b>opening to 2pm</b> every day! Make your own combo from an exciting list of entrees!</p>
 			<form action="menu/lunch.html">
 				<button> &#9655; &nbsp; LUNCH MENU </button>
 			</form>
