--- a/menu/familydinners.html
+++ b/menu/familydinners.html
@@ -119,7 +119,7 @@
 				<div class="item">
 					<p>DELUXE DINNER FOR THREE <span>$57.95</span></p>
 					<p class="family desc">
-						<strong>choose one: &nbsp;SPRING ROLLS / WON TON WOUP / HOT &amp; SOUR SOUP </strong>
+						<strong>choose one: &nbsp;SPRING ROLLS / WON TON  / HOT &amp; SOUR SOUP </strong>
 						<br><br>
 						HOUSE SPECIAL CHOP SUEY <b>+</b> CANTONESE-STYLE CHOW MEIN <b>+</b> SWEET &amp; SOUR CHICKEN BALLS <b>+</b> HONEY GARLIC RIBS <b>+</b> STEAMED RICE
 					</p>
@@ -135,7 +135,7 @@
 				<div class="item">
 					<p>DELUXE DINNER FOR FOUR <span>$76.95</span></p>
 					<p class="family desc">
-						<strong>choose one: &nbsp;SPRING ROLLS / WON TON WOUP / HOT &amp; SOUR SOUP </strong>
+						<strong>choose one: &nbsp;SPRING ROLLS / WON TON SOUP / HOT &amp; SOUR SOUP </strong>
 						<br><br>
 						CANTONESE-STYLE CHOW MEIN <b>+</b> ALMOND GAI DING <b>+</b> SWEET &amp; SOUR CHICKEN BALLS <b>+</b> HONEY GARLIC RIBS <br>
 						<b>+</b> WHOLE PRAWNS with BLACK BEAN SAUCE <b>+</b> STEAMED RICE
@@ -144,7 +144,7 @@
 				<div class="family last item">
 					<p>DELUXE DINNER FOR SIX <span>$107.95</span></p>
 					<p class="family desc">
-						<strong>choose one: &nbsp;SPRING ROLLS / WON TON WOUP / HOT &amp; SOUR SOUP </strong>
+						<strong>choose one: &nbsp;SPRING ROLLS / WON TON SOUP / HOT &amp; SOUR SOUP </strong>
 						<br><br>
 						ALMOND GAI DING <b>+</b> CANTONESE-STYLE CHOW MEIN <b>+</b> GINGER BEEF <b>+</b> WHOLE PRAWNS with BLACK BEAN SAUCE <b>+</b> LEMON CHICKEN <b>+</b> SWEET &amp; SOUR PORK with PINEAPPLE <b>+</b> STEAMED RICE 
 					</p>
