new retirement notice; update page links + minor styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
-			<a href="updates.html"><li>UPDATES</li></a>
+			<a href="retirement.html"><li><u>RETIREMENT!</u></li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
@@ -31,7 +31,7 @@
 		</h1>
 		<hr>
 		<p id="blurb">Our kitchen is currently open for <b>[ <u>TAKE-OUT only</u> ]</b> during our usual business hours.<br><br>
-			~ We thank you for continuing to support your local businesses and community ~
+			~ We are infinitely grateful for your support as we move towards our last month of business <br>and transition into retirement ~
 		</p>
 	</div>
 	<div id="aboutus">
@@ -39,7 +39,7 @@
 			<p> a little blurb about us </p>
 		</div>
 		<p id="blurb"> 
-			<b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 44 years of practice!
+			<b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 46 years of practice!
 		</p>
 	</div>
 	<div class="services">
@@ -62,13 +62,13 @@
 			</form>
 		</div>
 		<div class="service-card" style="order: 3">
-			<div class="service-icon" style="background-image: url('res/icons/svg/002-delivery-1.svg'); 
+			<div class="service-icon" style="background-image: url('res/icons/png/apron.png'); 
 			 background-size: 58px;">
 			 </div>
-			<h1> UPDATES </h1>
-			<p>We are keeping a keen eye on the COVID-19 pandemic. Click HERE to tune into our updates and upcoming changes.</p>
-			<form action="updates.html">
-				<button>&#9655; &nbsp; HERE :)</button>
+			<h1> WE ARE RETIRING </h1>
+			<p>It's been a long and wild ride, y'all! Read about our plans and last update below</p>
+			<form action="retirement.html">
+				<button>&#9655; &nbsp;AN UPDATE</button>
 			</form>
 		</div>
 	</div>
