--- a/afternote.html
+++ b/afternote.html
@@ -21,7 +21,7 @@
 			<a href="menu/lunch.html"><li>LUNCH</li></a>
 			<a href="menu/appetizers+soup.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
-			<a href="updates.html"><li>UPDATES</li></a>
+			<a href="retirement.html"><li><u>RETIREMENT!</u></li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
