--- a/retirement.html
+++ b/retirement.html
@@ -37,7 +37,7 @@
 				Dear Valued Customers,<br><br>
 				After 46 wonderful years of serving you at The Orient Family Restaurant, I wanted to share some bittersweet news with you. It's with a mix of emotions to announce that our chefs and owners, Victor and Chun, will be retiring and closing this business.
 				<br><br>
-				Being a part of this community and getting know each and every one of you have been an incredible journey. We are left with amazing stories and memories. As we reflect, we are also filled with gratitude for the support from our loyal customer base and staff throughout all the highs and lows. 
+				Being a part of this community and getting to know each and every one of you have been an incredible journey. We are left with amazing stories and memories. As we reflect, we are also filled with gratitude for the support from our loyal customer base and staff throughout all the highs and lows. 
 				<br><br>
 				While we may be retiring, the spirit of The Orient will live through the next business under a new chef and restauranteur couple with over 16 years of experience. They share our passion for great food and hospitality, and I know they will continue to delight your taste buds and warm your hearts long after we have hung up our aprons. 
 				<br><br>
